style.css
html {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0px;
    padding: 0px;
    height: 100vh;
    width: 100vw;
    background-color: white;
}

body {
    display: flex;
    flex-direction: column;
    height: 90%;
    width: 90%;
    gap: 4px;
}

.pad {
    display: flex;
    height: 70%;
    width: 100%;
    border-radius: 10px;
    outline: 2px dotted black;
}

.numbers, .symbols {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 1px;
}

.numbers {
    width: 60%;
    height: 100%;
}

.symbols{
    width: 40%;
    height: 100%;
}

.numb {
    width: 30%;
    height: 20%;
}

.symb {
    width: 45%;
    height: 20%;
}

.numb, .symb {
    font-size: x-large;
    border-radius: 20px;
}

b {
    font-size: x-large;
    width: 90%;
    overflow-wrap: anywhere;
    overflow-y: auto;
    max-height: 90%;
    padding: 5px;
    text-align: end;
}

.display {
    display: flex;
    flex-wrap: wrap;
    height: 30%;
    width: 100%;
    border-radius: 20px;
    outline: 2px dotted black;
    justify-content: center;
    align-items: flex-end;
}

